--- a/arxiv/2022_12_arxiv.html
+++ b/arxiv/2022_12_arxiv.html
@@ -162,7 +162,7 @@
 <p class="p1">20221229</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.13364">https://arxiv.org/abs/2212.13364</a></span> Variational Monte Carlo Study of Symmetric Mass Generation in a Bilayer Honeycomb Lattice Model (Yi-Zhuang You)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.13668">https://arxiv.org/abs/2212.13668</a></span> Quantum groups, non-commutative AdS2, and chords in the double-scaled SYK model</p>
-<p class="p3"><a href="https://arxiv.org/abs/2212.13851">https://arxiv.org/abs/2212.13851</a><span class="s2"> RG flows from WZW models</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.13851">https://arxiv.org/abs/2212.13851</a></span> RG flows from WZW models</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
