--- a/arxiv/2023_04_arxiv.html
+++ b/arxiv/2023_04_arxiv.html
@@ -105,6 +105,44 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.08025">https://arxiv.org/abs/2210.08025</a></span> Strong correlations in ABC-stacked trilayer graphene: Moir ́e is important ***** (Adarsh S. Patri and T. Senthil)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.06507">https://arxiv.org/abs/2304.06507</a></span> The trace anomaly for a chiral fermion ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.13144">https://arxiv.org/abs/2303.13144</a></span> Topological classification of non-Hermitian Hamiltonians with frequency dependence ****</p>
+<br>
+<p class="p1">20230417</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.06743">https://arxiv.org/abs/2304.06743</a></span> Holographic measurement in CFT thermofield doubles (Shao-Kai Jian, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07233">https://arxiv.org/abs/2304.07233</a></span> The ground state of the Kondo lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07100">https://arxiv.org/abs/2304.07100</a></span> van Hove, Rashba, and Hubbard meet to form first-order and higher-order topological superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07223">https://arxiv.org/abs/2304.07223</a></span> Emergent SU(8) Dirac semimetal and novel proximate phases of spin-orbit coupled fermions on a honeycomb lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06828">https://arxiv.org/abs/2302.06828</a></span> Fermi liquids beyond the forward scattering limit: the role of non-forward scatterings for scale invariance and instabilities (Han Ma, Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00053">https://arxiv.org/abs/2212.00053</a></span> Z2 spin liquids in the higher spin-S Kitaev honeycomb model: An exact deconfined Z2 gauge structure in a non-integrable model (Han Ma)</p>
+<p class="p2"><br></p>
+<p class="p1">20230418</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07467">https://arxiv.org/abs/2304.07467</a></span> Chirality and correlations in the spontaneous spin-valley polarization of rhombohedral multilayer graphene *** (Jeil Jung, Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08150">https://arxiv.org/abs/2304.08150</a></span> Effects of first- and second-order topological phases on the equilibrium crystal shapes *** (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07432">https://arxiv.org/abs/2304.07432</a></span> Electromagnetic response of superconductors in mean-field approximation (Chang-geun Oh, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08764">https://arxiv.org/abs/2304.08764</a></span> How Infrared Singularities Affect Nambu-Goldstone Bosons at Finite Temperatures</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07654">https://arxiv.org/abs/2304.07654</a></span> Wilson-Fisher fixed points in presence of Dirac fermions ***** (Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08277">https://arxiv.org/abs/2304.08277</a></span> Exploring critical systems under measurements and decoherence via Keldysh field theory *** (Ruochen Ma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07318">https://arxiv.org/abs/2304.07318</a></span> Upper bounds on superconducting and excitonic phase-stiffness for interacting isolated narrow bands (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08428">https://arxiv.org/abs/2304.08428</a></span> Scaling law of the Hall coefficient in cuprates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08475">https://arxiv.org/abs/2304.08475</a></span> Symmetry Fractionalized (Irrationalized) Fusion Rules and Two Domain-Wall Verlinde Formulae</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07319">https://arxiv.org/abs/2304.07319</a></span> Scrambling is Necessary but Not Sufficient for Chaos</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.07404">https://arxiv.org/abs/2304.07404</a></span> The worldline formalism in strong-field QED</p>
+<p class="p2"><br></p>
+<p class="p1">20230419</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08572">https://arxiv.org/abs/2304.08572</a></span> Strong-randomness renormalization groups</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08522">https://arxiv.org/abs/2304.08522</a></span> PT breaking and RG flows between multicritical Yang-Lee fixed points *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.09139">https://arxiv.org/abs/2304.09139</a></span> Generating large disordered stealthy hyperuniform systems with ultra-high accuracy to determine their physical properties (Jaeuk Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08525">https://arxiv.org/abs/2304.08525</a></span> Thermalization at Low Temperatures via Slowly-Driven Multi-Site Baths (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08635">https://arxiv.org/abs/2304.08635</a></span> Electromagnetic signatures of chiral quantum spin liquid</p>
+<p class="p2"><br></p>
+<p class="p1">20230420</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.09812">https://arxiv.org/abs/2304.09812</a></span> Signatures of Cooper pair dynamics and quantum-critical superconductivity in tunable carrier bands (Patrick A. Lee, Leonid S. Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.09688">https://arxiv.org/abs/2304.09688</a></span> Quantum quench dynamics in the Luttinger liquid phase of the Hatano-Nelson model</p>
+<p class="p2"><br></p>
+<p class="p1">20230421</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.09907">https://arxiv.org/abs/2304.09907</a></span> Z2-Nontrivial Moir ́e Minibands and Interaction-Driven Quantum Anomalous Hall Insulators in Topological Insulator Based Moir ́e Heterostructures *** (Zhen Bi, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.09891">https://arxiv.org/abs/2304.09891</a></span> Vison crystals, chiral and crystalline phases in the Yao-Lee model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.10390">https://arxiv.org/abs/2304.10390</a></span> Critical properties of the Majorana chain with competing interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07885">https://arxiv.org/abs/2302.07885</a></span> A model of d-wave superconductivity, antiferromagnetism, and charge order on the square lattice ***** (Maine Christos, Zhu-Xi Luo, Henry Shackleton, Ya-Hui Zhang, Mathias S. Scheurer, Subir Sachdev)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
