--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ TA class materials: <a href="taclass.html">here</a>
 <a href="https://scholar.google.com/citations?user=Yow78DwAAAAJ" class="publink">Publications on <img src="img/Google_Scholar_icon.svg" height="17px" style="vertical-align: sub;" alt="Google Scholar"><img src="img/Google_Scholar_logo.svg" height="17px" style="vertical-align: bottom;" alt="Google Scholar"></a><br>
 <a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1" class="publink">Publications on <img src="img/arXiv_logo.svg" height="17px" style="vertical-align: bottom;" alt="arXiv"></a><br>
 <a href="https://inspirehep.net/authors/1939891" class="publink">Publications on <img src="img/INSPIRE_logo.svg" height="17px" style="vertical-align: bottom;" alt="INSPIRE"></a><br>
-<a href="https://orcid.org/0000-0003-3141-1964" class="publink">Publications on <img src="img/ORCID_iD.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"><img src="img/ORCID_logo.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"></a>
+<a href="https://orcid.org/0000-0003-3141-1964" class="publink">Publications on <img src="img/ORCID_iD.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"><img src="img/ORCID_logo.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"></a><br>
+<a href="https://www.researchgate.net/profile/Sangeun-Han" class="publink">Publications on <img src="img/ResearchGate_icon.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"><img src="img/ResearchGate_logo.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"></a>
 <br><br>
 Articles related to my works:
 <br>
@@ -99,7 +100,7 @@ Articles related to my works:
   <div class="shadow"></div></div>&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a>
 			</span>
 		<span class="cvperiod"></span></div>
-		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>*, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>*, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
 			<a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
   <label>
     <input type="checkbox">
