--- a/arxiv/2023_04_arxiv.html
+++ b/arxiv/2023_04_arxiv.html
@@ -143,6 +143,45 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.09891">https://arxiv.org/abs/2304.09891</a></span> Vison crystals, chiral and crystalline phases in the Yao-Lee model</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.10390">https://arxiv.org/abs/2304.10390</a></span> Critical properties of the Majorana chain with competing interactions</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07885">https://arxiv.org/abs/2302.07885</a></span> A model of d-wave superconductivity, antiferromagnetism, and charge order on the square lattice ***** (Maine Christos, Zhu-Xi Luo, Henry Shackleton, Ya-Hui Zhang, Mathias S. Scheurer, Subir Sachdev)</p>
+<br>
+<p class="p1">20230424</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.10635">https://arxiv.org/abs/2304.10635</a></span> Higher order topology in a band deformed Haldane model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.10564">https://arxiv.org/abs/2304.10564</a></span> Random geometry at an infinite-randomness fixed point ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.10789">https://arxiv.org/abs/2304.10789</a></span> Gauging fractons and linearized gravity (Nicola Maggiore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.11031">https://arxiv.org/abs/2304.11031</a></span> Curie-law crossover in spin liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.10906">https://arxiv.org/abs/2304.10906</a></span> A combined approach to analyze and classify families of classical spin liquids</p>
+<p class="p2"><a href="https://arxiv.org/abs/2304.10562">https://arxiv.org/abs/2304.10562</a><span class="s2"> NONLOCAL LAGRANGIAN FORMALISM</span></p>
+<p class="p3"><br></p>
+<p class="p1">20230425</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.12261">https://arxiv.org/abs/2304.12261</a></span> Fractional quantum anomalous Hall states in twisted bilayer MoTe2 and WSe2 (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.11786">https://arxiv.org/abs/2304.11786</a></span> Half-quantum vortex generation in a two-component Bose-Einstein condensate by an oscillatory magnetic obstacle (Y. Shin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.11331">https://arxiv.org/abs/2304.11331</a></span> A Carrollian Orgin of Spacetime Subsystem Symmetry ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.11536">https://arxiv.org/abs/2304.11536</a></span> Spin-triplet superconductivity from quantum-geometry-induced ferromagnetic fluctuation *** (Akito Daido, Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.12242">https://arxiv.org/abs/2304.12242</a></span> Fracton-elasticity duality on curved manifolds ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.11716">https://arxiv.org/abs/2304.11716</a></span> Quantum Spin Supersolid as a precursory Dirac Spin Liquid in a Triangular Lattice Antiferromagnet (Gang Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.12221">https://arxiv.org/abs/2304.12221</a></span> Coulomb drag and heat transfer in strange metals **** (Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.11302">https://arxiv.org/abs/2207.11302</a></span> Diagrammatics for the Inverse Problem in Spin Systems and Simple Liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.03596">https://arxiv.org/abs/2203.03596</a></span> Symmetry as a shadow of topological order and a derivation of topological holographic principle *** (Xiao-Gang Wen)</p>
+<p class="p3"><br></p>
+<p class="p1">20230426</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.12612">https://arxiv.org/abs/2304.12612</a></span> Bose-Einstein condensations of magnons in quantum magnets with spin-orbit coupling in a Zeeman field (Jinwu Ye)<br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13028">https://arxiv.org/abs/2304.13028</a></span> Unifying Emergent Hydrodynamics and Lindbladian Low Energy Spectra across Symmetries, Constraints, and Long-Range Interactions **** (Jong Yeon Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.12697">https://arxiv.org/abs/2304.12697</a></span> Weakly damped bosons and precursor gap in the vicinity of an antiferromagnetic metallic transition **** (Erez Berg)</p>
+<p class="p3"><br></p>
+<p class="p1">20230427</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13068">https://arxiv.org/abs/2304.13068</a></span> Spin-polarons and ferromagnetism in doped dilute Wigner-Mott insulators ** (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13624">https://arxiv.org/abs/2304.13624</a></span> Quantum many-body scars in spin models with multi-body interactions ** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13198">https://arxiv.org/abs/2304.13198</a></span> Continuous symmetry breaking in adaptive quantum dynamics ** (Sagar Vijay, Matthew P. A. Fisher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13378">https://arxiv.org/abs/2304.13378</a></span> Quantum liquids of the S=3/2 Kitaev honeycomb and related Kugel-Khomskii models (J. Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13395">https://arxiv.org/abs/2304.13395</a></span> Density-matrix renormalization group: a pedagogical introduction *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13716">https://arxiv.org/abs/2304.13716</a></span> Fermionic skyrmions and bosonization for a Gross-Neveu transition ***** (Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13356">https://arxiv.org/abs/2304.13356</a></span> Measurement in Quantum Field Theory</p>
+<p class="p3"><br></p>
+<p class="p1">20230428</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13060">https://arxiv.org/abs/2003.13060</a></span> Giant caloric effects close to any critical end point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.14173">https://arxiv.org/abs/2304.14173</a></span> U(1) quasi-hydrodynamics: Schwinger-Keldysh effective field theory and holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02837">https://arxiv.org/abs/2303.02837</a></span> Algebras, Regions, and Observers ***** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13744">https://arxiv.org/abs/2304.13744</a></span> Quantum statistical mechanics of the Sachdev-Ye-Kitaev model and charged black holes ***** (Subir Sachdev)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
