--- a/arxiv/2023_05_arxiv.html
+++ b/arxiv/2023_05_arxiv.html
@@ -44,6 +44,47 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20230501</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.15009">https://arxiv.org/abs/2304.15009</a></span> Emergent metallicity at the grain boundaries of higher-order topological insulators (Vladimir Juriˇci ́c, Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.14438">https://arxiv.org/abs/2304.14438</a></span> Green’s functions of multiband non-Hermitian systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.14812">https://arxiv.org/abs/2304.14812</a></span> The magnetized (2+1)-dimensional Gross-Neveu model at finite density</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.14433">https://arxiv.org/abs/2304.14433</a></span> Higher-form Symmetries under Weak Measurement ***** (Kaixiang Su, Nayan Myerson-Jain, Chong Wang, Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.14650">https://arxiv.org/abs/2304.14650</a></span> Fermi arc in p-wave holographic superconductors (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13744">https://arxiv.org/abs/2304.13744</a></span> Quantum statistical mechanics of the Sachdev-Ye-Kitaev model and charged black holes ***** (Subir Sachdev)</p>
+<p class="p2"><br></p>
+<p class="p1">20230502</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.00155">https://arxiv.org/abs/2305.00155</a></span> Classification of Classical Spin Liquids: Typology and Resulting Landscape (Han Yan, Owen Benton, Roderich Moessner, Andriy H. Nevidomskyy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.00941">https://arxiv.org/abs/2305.00941</a></span> Exploring Spontaneous Symmetry Breaking through Fractonic Superfluids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.00648">https://arxiv.org/abs/2305.00648</a></span> Favorable phase transitions induced by spinful electron-electron interactions in two-dimensional semimetal with a quadratic band crossing point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.00448">https://arxiv.org/abs/2305.00448</a></span> General construction scheme for geometrically nontrivial flat band models (Jun-Won Rhim)</p>
+<p class="p2"><br></p>
+<p class="p1">20230503</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.00990">https://arxiv.org/abs/2305.00990</a></span> BCS-like disorder-driven instabilities and ultraviolet effects in nodal-line semimetals **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01001">https://arxiv.org/abs/2305.01001</a></span> Quantum statistical mechanics of the Sachdev-Ye-Kitaev model and strange metals ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01019">https://arxiv.org/abs/2305.01019</a></span> Spatial deformation of many-body quantum chaotic systems and quantum information scrambling (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01033">https://arxiv.org/abs/2305.01033</a></span> Heavy-fermion strange metal and quantum spin liquid in a 4d-electron trimer lattice (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01650">https://arxiv.org/abs/2305.01650</a></span> Probing critical states of matter on a digital quantum computer</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.06476">https://arxiv.org/abs/2207.06476</a></span> Chiral Kondo Lattice in Doped MoTe2/WSe2 Bilayers (Jennifer Cano, J. H. Pixley, Andrew Millis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.02518">https://arxiv.org/abs/2203.02518</a></span> SU(2)-Symmetric Spin-Boson Model: Quantum Criticality, Fixed-Point Annihilation, and Duality (Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11534">https://arxiv.org/abs/2303.11534</a></span> A simple quantum system that describes a black hole **** (Juan Maldacena)</p>
+<p class="p2"><br></p>
+<p class="p1">20230504</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01702">https://arxiv.org/abs/2305.01702</a></span> Exciton and light induced ferromagnetism from doping a moir ́e Mott insulator (Hui Yang, Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01746">https://arxiv.org/abs/2305.01746</a></span> Emergent U(1) symmetry in non-particle-conserving 1D models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02006">https://arxiv.org/abs/2305.02006</a></span> Orbital Fulde-Ferrell-Larkin-Ovchinnikov state in an Ising superconductor (Noah F. Q. Yuan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.04706">https://arxiv.org/abs/2301.04706</a></span> Aspects of ZN rank-2gaugetheoryin(2+1)D: construction schemes, holonomies, and sublattice one-form symmetries (Yun-Tak Oh, Salvatore D. Pace, Jung Hoon Han, Yizhi You, Hyun-Yong Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20230505</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02336">https://arxiv.org/abs/2305.02336</a></span> Theory of shot noise in strange metals ***** (Alexander Nikolaenko, Subir Sachdev, Aavishkar A. Patel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02340">https://arxiv.org/abs/2305.02340</a></span> Nontrivial Quantum Geometry and the Strength of Electron-Phonon Coupling (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02341">https://arxiv.org/abs/2305.02341</a></span> Failure of Topological Invariants in Strongly Correlated Matter **** (Barry Bradlyn, Philip Phillips)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03031">https://arxiv.org/abs/2305.03031</a></span> Magic-angle helical trilayer graphene *** (Pablo Jarillo-Herrero, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02400">https://arxiv.org/abs/2305.02400</a></span> Replicating Higgs fields in Ising gauge theory: the registry order (Jan Zaanen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03035">https://arxiv.org/abs/2305.03035</a></span> Iron-based superconductors: teenage, complex, challenging ***** (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02432">https://arxiv.org/abs/2305.02432</a></span> Quantum phase transition between symmetry enriched topological phases in tensor-network states *** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02492">https://arxiv.org/abs/2305.02492</a></span> A Chern-Simons theory for dipole symmetry ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02833">https://arxiv.org/abs/2305.02833</a></span> Emergence of curved momentum-spacetime and its effect on the cyclotron motion in the antiferromagnetic quantum critical metal ***** (Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03024">https://arxiv.org/abs/2305.03024</a></span> A Lattice Chiral Boson Theory in 1 + 1d ***** (Michael DeMarco, Ethan Lake, Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02994">https://arxiv.org/abs/2204.02994</a></span> Superconductivity, charge density wave, and supersolidity in flat bands with tunable quantum metric **** (Johannes S. Hofmann, Erez Berg, Debanjan Chowdhury)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
