--- a/arxiv/2023_05_arxiv.html
+++ b/arxiv/2023_05_arxiv.html
@@ -85,6 +85,43 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02833">https://arxiv.org/abs/2305.02833</a></span> Emergence of curved momentum-spacetime and its effect on the cyclotron motion in the antiferromagnetic quantum critical metal ***** (Sung-Sik Lee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03024">https://arxiv.org/abs/2305.03024</a></span> A Lattice Chiral Boson Theory in 1 + 1d ***** (Michael DeMarco, Ethan Lake, Xiao-Gang Wen)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02994">https://arxiv.org/abs/2204.02994</a></span> Superconductivity, charge density wave, and supersolidity in flat bands with tunable quantum metric **** (Johannes S. Hofmann, Erez Berg, Debanjan Chowdhury)</p>
+<br>
+<p class="p1">20230508</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03404">https://arxiv.org/abs/2305.03404</a></span> Filamentary superconductivity in systems with competing charge density waves</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03398">https://arxiv.org/abs/2305.03398</a></span> Symmetry-protected topological phases, conformal criticalities, and duality in exactly solvable SO(n) spin chains ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11345">https://arxiv.org/abs/2303.11345</a></span> Higher-order topological superconductivity in monolayer WTe2 from repulsive interactions ***** (Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.01718">https://arxiv.org/abs/2108.01718</a></span> Universal equilibration dynamics of the Sachdev-Ye-Kitaev model *** (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03671">https://arxiv.org/abs/2305.03671</a></span> An Introduction to Noncommutative Physics *****</p>
+<p class="p2"><br></p>
+<p class="p1">20230509</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.04920">https://arxiv.org/abs/2305.04920</a></span> Shedding Light on Microscopic Details: 2D Spectroscopy of 1D Quantum Ising Magnets **** (GiBaik Sim, Frank Pollmann, Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.04188">https://arxiv.org/abs/2305.04188</a></span> Experimental Observation of Three-Dimensional Vortex Ordering in Ferroelectric Nanoparticles (Yongsoo Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.04648">https://arxiv.org/abs/2305.04648</a></span> Quantum simulation of the 1D Fermi-Hubbard model as a Z2 lattice-gauge theory **** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.02336">https://arxiv.org/abs/2305.02336</a></span> Theory of shot noise in strange metals ***** (Alexander Nikolaenko, Subir Sachdev, Aavishkar A. Patel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01001">https://arxiv.org/abs/2305.01001</a></span> Quantum statistical mechanics of the Sachdev-Ye-Kitaev model and strange metals ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13744">https://arxiv.org/abs/2304.13744</a></span> Quantum statistical mechanics of the Sachdev-Ye-Kitaev model and charged black holes ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.11337">https://arxiv.org/abs/2301.11337</a></span> New critical states induced by measurement *** (Hong Yao, Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14861">https://arxiv.org/abs/2203.14861</a></span> Bloch Theorem Dictated Wave Chaos in Microcavity Crystals (Hee Chul Park, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.14002">https://arxiv.org/abs/2108.14002</a></span> Strong Interlayer Coupling and Stable Topological Flat Bands in Twisted Bilayer Photonic Moire ́ Superlattices (Hee Chul Park, Moon Jip Park)</p>
+<p class="p2"><br></p>
+<p class="p1">20230510</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.05615">https://arxiv.org/abs/2305.05615</a></span> A discrete formulation of the Kane-Mele Z2 invariant **** (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.05584">https://arxiv.org/abs/2305.05584</a></span> Low-dimensional quantum gases in curved geometries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.05633">https://arxiv.org/abs/2305.05633</a></span> Time-reversal and PT symmetry breaking in non-Hermitian field theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.04937">https://arxiv.org/abs/2210.04937</a></span> Z3 parafermion in the double charge-Kondo model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.04412">https://arxiv.org/abs/2210.04412</a></span> Non-Bloch bands in two-dimensional non-Hermitian systems (Shuichi Murakami)</p>
+<p class="p2"><br></p>
+<p class="p1">20230511</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.05774">https://arxiv.org/abs/2305.05774</a></span> Fusion Surface Models: 2+1d Lattice Models from Fusion 2-Categories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01895">https://arxiv.org/abs/2305.01895</a></span> Simplex path integral and renormalization group for high-order interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.13954">https://arxiv.org/abs/2304.13954</a></span> Why magnetic monopole becomes dyon in topological insulators ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.14366">https://arxiv.org/abs/2302.14366</a></span> Z2 Non-Hermitian skin effect in equilibrium heavy-fermions</p>
+<p class="p2"><br></p>
+<p class="p1">20230512</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.06949">https://arxiv.org/abs/2305.06949</a></span> Twisted bilayer graphene at charge neutrality: competing orders of SU(4) Dirac fermions **** (Laura Classen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.06389">https://arxiv.org/abs/2305.06389</a></span> Phase diagram of the three-dimensional subsystem toric code ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07028">https://arxiv.org/abs/2305.07028</a></span> 2D Hamiltonians with exotic bipartite and topological entanglement ***** (Ethan Lake, Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07012">https://arxiv.org/abs/2305.07012</a></span> Flux fractionalization transition in two-dimensional dimer-loop models (Kedar Damle)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
